<resources>
    <string name="app_name">navDrawerDemo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_newcustomer">New Customer</string>
    <string name="menu_customerdetails">Customer Details</string>
    <string name="menu_employeedetails">Employee Details</string>
    <string name="menu_ongoingprojects">Ongoing Projects</string>
    <string name="menu_finishedprojects">Finished Projects</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">Logout</string>
</resources>
